# pixflix

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260308_0001_initial_schema.py
src/pixflix/: __init__.py  app.py  core.py  models.py  pix_provider.py  services.py  settings.py
tests/: test_api_flow.py  test_core.py
