[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "pixflix"
version = "0.1.0"
description = "PIX-powered interactive terminal tooling for arcades."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Pixflix Team" }
]
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.116.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]
prod = [
  "psycopg[binary]>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
